--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <h3>WordPress</h3>
                     </div>
                     <div>
-                        <img src="Imagenes/diseño-icon.png" alt="">
+                        <img src="imagenes/diseño-icon.png" alt="">
                         <h3>Diseño UI / UX</h3>
                     </div>
                     </div>
@@ -152,9 +152,9 @@
                     
             </div>
             <div class="social">
-                <a href="https://github.com/haroldhavi" target="_blak"><img src="Imagenes/github-icon.png" alt=""></a>
-                <a href="https://www.linkedin.com/in/harold-stiven-virg%C3%BCez-engativa-b29358206/" target="_blak"><img src="Imagenes/linkedin-icon.png" alt=""></a>
-                <a data-modal-id="message"><img src="Imagenes/message-icon.jpg" alt=""></a>
+                <a href="https://github.com/haroldhavi" target="_blak"><img src="imagenes/github-icon.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/harold-stiven-virg%C3%BCez-engativa-b29358206/" target="_blak"><img src="imagenes/linkedin-icon.png" alt=""></a>
+                <a data-modal-id="message"><img src="imagenes/message-icon.jpg" alt=""></a>
               
             </div>
         </div>
@@ -198,9 +198,9 @@ openDepuration: 200;>
             <div class="eins-modal-text-3">
                 <span>Tecnologías usadas</span>
                 <div class="eins-modal-tec">
-                    <img src="Imagenes/wordpress-icon.png" alt="">
-                    <img src="Imagenes/html-icon.png" alt="">
-                    <img src="Imagenes/css-icon.png" alt="">
+                    <img src="imagenes/wordpress-icon.png" alt="">
+                    <img src="imagenes/html-icon.png" alt="">
+                    <img src="imagenes/css-icon.png" alt="">
                 </div>
             </div>
         </div>
@@ -229,7 +229,7 @@ openDepuration: 200;>
             <div class="eins-modal-text-3">
                 <span>Tecnologías usadas</span>
                 <div class="eins-modal-tec">
-                    <img src="Imagenes/figma-icon.png" alt="">
+                    <img src="imagenes/figma-icon.png" alt="">
                 </div>
             </div>
         </div>
@@ -258,9 +258,9 @@ openDepuration: 200;>
             <div class="eins-modal-text-3">
                 <span>Tecnologías usadas</span>
                 <div class="eins-modal-tec">
-                    <img src="Imagenes/html-icon.png" alt="">
-                    <img src="Imagenes/css-icon.png"alt="">
-                    <img src="Imagenes/js-icon.png" alt="">
+                    <img src="imagenes/html-icon.png" alt="">
+                    <img src="imagenes/css-icon.png"alt="">
+                    <img src="imagenes/js-icon.png" alt="">
                 </div>
             </div>
         </div>
