--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
         <div class="hero" id="inicio">
             <div class="container">
 
-            <img src="/imagenes/imagenFondo.jpg" alt="">
+            <img src="/imagenes/imagenFondo.png" alt="">
         </div>
     </div>
         <div class="profile">
             <div class="square"></div>
             <div class="circle-trans"></div>
             <div class="circle"></div>
-            <div class="profile-img"><img src="/imagenes/perfil.jpg" alt=""></div>
+            <div class="profile-img"><img src="/imagenes/perfil.png" alt=""></div>
             <div class="square-text">Harold Virgüez</div>
             <div class="square-text-2"><span>Lic. en psicologia y pedagogia | Web developer</span></div>
         <div class="contact-icon">
             <a href="https://github.com/haroldhavi" target="_blak"><img src="/imagenes/github-icon.png" alt=""></a>
             <a href="https://www.linkedin.com/in/harold-stiven-virg%C3%BCez-engativa-b29358206/" target="_blak"><img src="/imagenes/linkedin-icon.png" alt=""></a>
-            <a data-modal-id="message"><img src="/imagenes/message-icon.jpg" alt=""></a>
+            <a data-modal-id="message"><img src="/imagenes/message-icon.png" alt=""></a>
         </div>
         <div class="square-text-3"><a href="#about-me"><span> About me </span> Sobre Mi</a></div>
 
@@ -154,7 +154,7 @@
             <div class="social">
                 <a href="https://github.com/haroldhavi" target="_blak"><img src="imagenes/github-icon.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/harold-stiven-virg%C3%BCez-engativa-b29358206/" target="_blak"><img src="imagenes/linkedin-icon.png" alt=""></a>
-                <a data-modal-id="message"><img src="imagenes/message-icon.jpg" alt=""></a>
+                <a data-modal-id="message"><img src="imagenes/message-icon.png" alt=""></a>
               
             </div>
         </div>
