--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero" id="inicio">
             <div class="container">
 
-            <img src="/imagenes/imagenFondo.png" alt="">
+            <img src="/imagenes/fondo1.jpg" alt="">
         </div>
     </div>
         <div class="profile">
